# Agents-in-a-box

./: .gitignore  README.md  pyproject.toml  run.sh  setup.sh
scripts/: setup_agent_sandbox.sh
src/: __init__.py  code_agent.py  config.py  sandbox.py  setup_agent_sandbox.sh
src/code_agents/: agent_prompts.py  agents.py  agents_core.py  app_cli.py  app_ui.py  code_agents.py  logger.py  sandbox.py
src/code_agents/lib/: agent_prompts.py  config.py  dockerimage_bakery.py
src/lib/: dockerimage_bakery.py
